Improved the visuals of the leaderboard. Added name prompt for players. Adjusted the scores and added hon-related leagues based on player's scores.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,8 +58,18 @@ caption {
     text-align: left;
 }
 
+#lboard {
+    text-decoration: underline;
+}
+
 th {
-    padding-right: 5rem;
+    font-size: 1.5rem;
+    padding-right: 8rem;
+}
+
+td {
+    font-size: 1.25rem;
+    font-weight: 600;
 }
 
 .tribute {
