Implemented the singleton design pattern for the GameSession. Fixed the drawSprite methods for both, the Player and the Enemy classes.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,9 @@ body {
 
 #canvas1 {
     width: 1200px;
-    height: 400px;
+    height: 400px;    
+    padding-right: 0;
+    padding-left: 0;
     border: 5px solid rgb(160, 210, 235);
     position: absolute;
     top: 50%;
