--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@ body {
     font-weight: 500;
 }
 
-#canvas1 {
+.canvasElem {
     width: 1200px;
     height: 400px;    
     padding-right: 0;
@@ -31,6 +31,15 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+
+#backgroundCanvas {
+    z-index: 1;
+}
+
+#actionCanvas {
+    z-index: 2;
 }
 
 .logo {
